# gst-python

./: .gitignore  meson.build
gi/overrides/: Gst.py  gstmodule.c
plugin/: gstpythonplugin.c
testsuite/: meson.build
